--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Vignesh K P - Electronics and Communication Engineer </title>
-    <link rel="icon" type="image/x-icon" href="./Images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width: 821px)" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -249,5 +249,6 @@
 
 </body>
 <script src="/script.js"></script>
+
 
 </html>
