--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
                 <!-- Here in src replace the given link with your image link -->
-                <img src="./Images/main.png" alt="">
+                <img src="./images/main.png" alt="">
             </div>
 
         </div>
@@ -78,7 +78,7 @@
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
                 <!-- Here in src replade the given link with your secondary image link -->
-                <img src="./Images/secondary.jpg" alt="" style="width: 50%;">
+                <img src="./images/secondary.jpg" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
@@ -103,7 +103,7 @@
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
         <div class="services-container flex s-around h-50"">
         <div class=" skills-left flex s-center items-center">
-            <img src="./Images/skills.png" alt="">
+            <img src="./images/skills.png" alt="">
         </div>
 
         <div class="skills-right flex items-center">
@@ -128,21 +128,21 @@
         <h1 class=" t-center my-2 t-white f-2">Services</h1>
         <div class="services-container flex s-center">
             <div class="test-item flex f-col items-center">
-                <img src="./Images//developer.png" alt="">
+                <img src="./images//developer.png" alt="">
                 <h1 class="t-white poppins">Web Development</h1>
                 <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
                     have their own websites. As my passion I will help you to build your clean and fast website for your
                     startup or your bussines.</p>
             </div>
             <div class="test-item flex f-col items-center">
-                <img src="./Images//project-based-embedded-design-services-500x500.webp" alt="">
+                <img src="./images//project-based-embedded-design-services-500x500.webp" alt="">
                 <h1 class="t-white poppins">Embedded System and Electronics Projects</h1>
                 <p class="t-white poppins">Design and implementation of embedded electronic solutions using microcontrollers such as Arduino and ESP32. 
                     Includes circuit design, prototyping, firmware development in C/Python, sensor interfacing, and testing of electronic modules for 
                     real-world use cases.</p>
             </div>
             <div class="test-item flex f-col items-center">
-                <img src="./Images//startup.png" alt="">
+                <img src="./images//startup.png" alt="">
                 <h1 class="t-white poppins">Growth Strategies</h1>
                 <p class="t-white poppins">As a web developer also I will help your brand to grow up . I will provide
                     the growth strategies for your brand. And also help in searching techniques for your brand.</p>
@@ -157,7 +157,7 @@
         <div class="projects-container flex s-center">
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="./Images/Landslidepredictionproject.jpeg" alt="">
+                    <img src="./images/Landslidepredictionproject.jpeg" alt="">
                 </div>
                 <h1 class="t-white poppins">Landslide Prediction System</h1>
                 <p class="t-white poppins"> Developed an IoT-based Landslide Prediction System using soil moisture, rainfall, vibration, and MEMS 
@@ -173,7 +173,7 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="./Images/cattle-monitoring.jpeg" alt="">
+                    <img src="./images/cattle-monitoring.jpeg" alt="">
                 </div>
                 <h1 class="t-white poppins">Cattle Health Monitoring System</h1>
                 <p class="t-white poppins">Designed and developed an IoT-enabled cattle health monitor using various sensors to detect fever, Heat 
@@ -252,3 +252,4 @@
 
 
 </html>
+
