--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
                 <!-- Here in src replade the given link with your secondary image link -->
-                <img src="./images/secondary.jpg" alt="" style="width: 50%;">
+                <img src="./images/secondary.JPG" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
@@ -252,4 +252,5 @@
 
 
 </html>
+
 
