--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
             <div class="skillss-container">
                 <div class="html bar p-relative"><span class="bar-content left t-white">HTML</span><span
                         class="bar-content right-skills t-white">80%</span></div>
+                <div class="python bar p-relative"><span class="bar-content left t-white">Python</span><span
+                        class="bar-content right-skills t-white">80%</span></div>
                 <div class="css bar p-relative"><span class="bar-content left t-white">CSS</span><span
+                        class="bar-content right-skills t-white">70%</span></div>
+                <div class="java bar p-relative"><span class="bar-content left t-white">Java</span><span
                         class="bar-content right-skills t-white">70%</span></div>
                 <div class="js bar p-relative"><span class="bar-content left t-white">JavaScript</span><span
                         class="bar-content right-skills t-white">50%</span></div>
-                <div class="bootstrap bar p-relative"><span class="bar-content left t-white">Java</span><span
-                        class="bar-content right-skills t-white">70%</span></div>
-                <div class="reactjs bar p-relative"><span class="bar-content left t-white">Python</span><span
-                        class="bar-content right-skills t-white">80%</span></div>
+                
             </div>
         </div>
         </div>
@@ -252,5 +253,6 @@
 
 
 </html>
+
 
 
